--- a/index-5.html
+++ b/index-5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -16,9 +16,57 @@
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/plugins/animate.min.css" />
     <link rel="stylesheet" href="assets/css/main.css?v=5.5" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.min.css">
+    <link rel="stylesheet" href="assets/js/flat-ui.min.js">
 </head>
 
 <body>
+    <!-- Modal -->
+    <div class="modal fade custom-modal" id="onloadModal" tabindex="-1" aria-labelledby="onloadModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="modal-body">
+                    <div class="deal" style="background-image: url('assets/imgs/banner/popup-1.png')">
+                        <div class="deal-top">
+                            <h6 class="mb-10 text-brand-2">Deal of the Day</h6>
+                        </div>
+                        <div class="deal-content detail-info">
+                            <h4 class="product-title"><a href="shop-product-right.html" class="text-heading">Organic fruit for your family's health</a></h4>
+                            <div class="clearfix product-price-cover">
+                                <div class="product-price primary-color float-left">
+                                    <span class="current-price text-brand">$38</span>
+                                    <span>
+                                        <span class="save-price font-md color3 ml-15">26% Off</span>
+                                    <span class="old-price font-md ml-15">$52</span>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="deal-bottom">
+                            <p class="mb-20">Hurry Up! Offer End In:</p>
+                            <div class="deals-countdown pl-5" data-countdown="2025/03/25 00:00:00">
+                                <span class="countdown-section"><span class="countdown-amount hover-up">03</span><span class="countdown-period"> days </span></span><span class="countdown-section"><span class="countdown-amount hover-up">02</span>
+                                <span class="countdown-period"> hours </span>
+                                </span><span class="countdown-section"><span class="countdown-amount hover-up">43</span><span class="countdown-period"> mins </span></span><span class="countdown-section"><span class="countdown-amount hover-up">29</span>
+                                <span class="countdown-period"> sec </span>
+                                </span>
+                            </div>
+                            <div class="product-detail-rating">
+                                <div class="product-rate-cover text-end">
+                                    <div class="product-rate d-inline-block">
+                                        <div class="product-rating" style="width: 90%"></div>
+                                    </div>
+                                    <span class="font-small ml-5 text-muted"> (32 rates)</span>
+                                </div>
+                            </div>
+                            <a href="shop-grid-right.html" class="btn hover-up">Shop Now <i class="fi-rs-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Quick view -->
     <div class="modal fade custom-modal" id="quickViewModal" tabindex="-1" aria-labelledby="quickViewModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -111,7 +159,7 @@
             </div>
         </div>
     </div>
-    <header class="header-area header-style-1 header-style-5 header-height-2">
+    <header class="header-area header-style-1 header-height-2">
         <div class="mobile-promotion">
             <span>Grand opening, <strong>up to 15%</strong> off all items. Only <strong>3 days</strong> left</span>
         </div>
@@ -325,7 +373,7 @@
                     <div class="header-nav d-none d-lg-flex">
                         <div class="main-categori-wrap d-none d-lg-block">
                             <a class="categories-button-active" href="#">
-                                <span class="fi-rs-apps"></span> <span class="et">Trending</span> Categories
+                                <span class="fi-rs-apps"></span> <span class="et">Browse</span> All Categories
                                 <i class="fi-rs-angle-down"></i>
                             </a>
                             <div class="categories-dropdown-wrap categories-dropdown-active-large font-heading">
@@ -391,7 +439,7 @@
                         <div class="main-menu main-menu-padding-1 main-menu-lh-2 d-none d-lg-block font-heading">
                             <nav>
                                 <ul>
-                                    <li class="hot-deals"><img src="assets/imgs/theme/icons/icon-hot-white.svg" alt="hot deals" /><a href="shop-grid-right.html">Deals</a></li>
+                                    <li class="hot-deals"><img src="assets/imgs/theme/icons/icon-hot.svg" alt="hot deals" /><a href="shop-grid-right.html">Deals</a></li>
                                     <li>
                                         <a class="active" href="index.html">Home <i class="fi-rs-angle-down"></i></a>
                                         <ul class="sub-menu">
@@ -553,7 +601,7 @@
                         </div>
                     </div>
                     <div class="hotline d-none d-lg-flex">
-                        <img src="assets/imgs/theme/icons/icon-headphone-white.svg" alt="hotline" />
+                        <img src="assets/imgs/theme/icons/icon-headphone.svg" alt="hotline" />
                         <p>1900 - 888<span>24/7 Support Center</span></p>
                     </div>
                     <div class="header-action-icon-2 d-block d-lg-none">
@@ -5430,7 +5478,7 @@
                             <ul class="contact-infor">
                                 <li><img src="assets/imgs/theme/icons/icon-location.svg" alt="" /><strong>Address: </strong> <span>5171 W Campbell Ave undefined Kent, Utah 53127 United States</span></li>
                                 <li><img src="assets/imgs/theme/icons/icon-contact.svg" alt="" /><strong>Call Us:</strong><span>(+91) - 540-025-124553</span></li>
-                                <li><img src="assets/imgs/theme/icons/icon-email-2.svg" alt="" /><strong>Email:</strong><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f98a98959cb9b79c8a8dd79a9694">[email&#160;protected]</a></span></li>
+                                <li><img src="assets/imgs/theme/icons/icon-email-2.svg" alt="" /><strong>Email:</strong><span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="4330222f26030d2630376d202c2e">[email&#160;protected]</a></span></li>
                                 <li><img src="assets/imgs/theme/icons/icon-clock.svg" alt="" /><strong>Hours:</strong><span>10:00 - 18:00, Mon - Sat</span></li>
                             </ul>
                         </div>
@@ -5538,7 +5586,6 @@
         </div>
     </div> -->
     <!-- Vendor JS-->
-    <script data-cfasync="false " src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js "></script><script src="assets/js/vendor/modernizr-3.6.0.min.js "></script>
     <script src="assets/js/vendor/jquery-3.6.0.min.js "></script>
     <script src="assets/js/vendor/jquery-migrate-3.3.0.min.js "></script>
     <script src="assets/js/vendor/bootstrap.bundle.min.js "></script>
@@ -5560,6 +5607,6 @@
     <!-- Template  JS -->
     <script src="assets/js/main.js?v=5.5 "></script>
     <script src="assets/js/shop.js?v=5.5 "></script>
-</body>
-
-</html>
+    </body>
+    
+    </html>
